# xic

./: .gitignore  CMakeLists.txt  __init__.py  index.html  library.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.ts
docs/: SUMMARY.md  spatial.md
docs/1-getting-started/: README.md  architecture.md
docs/2-rho/: 1-tunnel.md  2-handshake.md  4-raw-cart.md  README.md
docs/3-memory-and-types/: path.md  primitives.md  string.md  time.md
docs/4-collections/: inline-array.md
docs/5-security/: random.md
docs/7-input-output/: README.md  file.md  log.md
docs/8-misc/: README.md  todo.md
docs/collections/: README.md  array.md  inline-array.md  map.md
docs/execution/: README.md  func.md
docs/getting-started/: README.md  architecture.md
docs/memory-and-types/: README.md  path.md  string-encoding.md  string.md  time.md
docs/rho/: README.md  railway-station.md  railway.md  tunnel.md
docs/security/: README.md  crypto.md  random.md
docs/sensors/: README.md  spatial.md
include/Rho/: Meta.hpp  Node.hpp  Puffer.hpp  Railway.hpp  Reach.hpp  Tunnel.hpp
include/Xi/: Array.hpp  Camera.hpp  Constants.hpp  Crypto.hpp  Encoding.hpp  FS.hpp  File.hpp  Framer.hpp  Func.hpp  Graphics.hpp  Hasher.hpp  InlineArray.hpp  Input.hpp  Log.hpp  Map.hpp  Math.hpp  Mesh.hpp  Path.hpp  Primitives.hpp  Random.hpp  Regex.hpp  Shader.hpp  Spatial.hpp  Stream.hpp  String.hpp  Texture.hpp  Time.hpp  Tree.hpp  Utils.hpp  Vector.hpp  Window.hpp
resources/scripts/: index.ts
resources/styles/: index.css
src/xi/: __init__.py
