[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xic"
version = "1.0.0"
description = "Xi C++ Core Primitives and the Rho Protocol for extreme IoT and High-Performance Applications."
readme = "README.md"
requires-python = ">=3.8"
license = "ISC"
authors = [
    { name = "Xi (Abderrahmene MERZOUG)" }
]
keywords = ["cpp", "esp32", "mesh", "rho", "crypto", "monocypher", "IoT", "UDP", "P2P", "game-networking"]
dependencies = [
    "cppyy"
]

[project.urls]
Homepage = "https://github.com/xizyd/xic"
Repository = "https://github.com/xizyd/xic.git"

[tool.hatch.build.targets.wheel]
packages = ["src/xi"]

# We force-include the C++ headers and monocypher package directly into the Python wheel
# so that cppyy can dynamically compile them upon module import on the user's machine.
[tool.hatch.build.targets.wheel.force-include]
"include" = "xi/include"
"packages" = "xi/packages"

[tool.hatch.build.targets.sdist]
include = [
    "src/xi",
    "include",
    "packages",
    "library.json",
    "package.json",
    "CMakeLists.txt",
    "docs"
]
